--- a/AIMLCodersBook/ReadMe
+++ b/AIMLCodersBook/ReadMe
@@ -1,1 +1,2 @@
 The Book named AI and Machine Learning for Coders read from Oreilly digital platform by Laurence Moroney.
+If there be any need to watch the original github then repo is at : https://github.com/lmoroney/tfbook/tree/master
