--- a/MyAIAGENTS/Build_Agent_ReAct.ipynb
+++ b/MyAIAGENTS/Build_Agent_ReAct.ipynb
@@ -142,7 +142,7 @@
    ],
    "source": [
     "%%writefile .env\n",
-    "OPENAI_API_KEY=\"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\""
+    "OPENAI_API_KEY=\"your_openai_key"
    ]
   },
   {
