--- a/MyAIAGENTS/LangGraphComponents.ipynb
+++ b/MyAIAGENTS/LangGraphComponents.ipynb
@@ -233,8 +233,8 @@
    ],
    "source": [
     "%%writefile .env\n",
-    "TAVILY_API_KEY=\"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\"\n",
-    "OPENAI_API_KEY=\"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\""
+    "TAVILY_API_KEY=\"your_tavily)key"\n",
+    "OPENAI_API_KEY=\"your_openai_key"
    ]
   },
   {
