--- a/MyAIAGENTS/LangGraphComponents.ipynb
+++ b/MyAIAGENTS/LangGraphComponents.ipynb
@@ -233,7 +233,7 @@
    ],
    "source": [
     "%%writefile .env\n",
-    "TAVILY_API_KEY=\"your_tavily_key",
+    "TAVILY_API_KEY=\"your_tavily_key\n",
     "OPENAI_API_KEY=\"your_openai_key"
    ]
   },
